--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ padding: 5px;
 <body data-pinterest-extension-installed="cr1.39.2" style="zoom: 0.7; display: block;">
 <!-- Swiper -->
 <div class="swiper-container swiper-container-horizontal">
-<img src="picture/channel_cover_1012_1506589344_凯叔声律启蒙.jpg" />
+<img src="http://oxyy4ouym.bkt.clouddn.com/upload/be/channel_cover_1012_1506589344_凯叔声律启蒙.jpg" />
 </div>
 <div class="container" style="padding: 10px; background: white;">
 <p>声律启蒙</p>
